@@ -38,7 +38,7 @@
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string>Interaction Workflow Definition</string> </value>
+            <value> <string>Budget Interaction Workflow</string> </value>
         </item>
       </dictionary>
     </pickle>
