@@ -1,3 +1,6 @@
+2011-07-01 yusei
+* Set proper title to interaction workflows.
+
 2011-04-14 yusei
 * Remove old unnecessary tales expression from relation string fields.
 
